kadnode (0.7) UNRELEASED; urgency=low

  * add support for domain specific secret/public keys using
    --auth-add-skey / --auth-add-pkey options and wild card matching
  * limit list command to local console for security reasons
  * do not ignore every every TLD  when computing an identifier, only .p2p
  * collect addresses when a search has finished,
    do not wait for another nodes reply
  * also search local storage, useful for small networks

 -- mwarning <mwarning@wal>  Wed, 19 Feb 2014 01:36:50 +0100

kadnode (0.6) unstable; urgency=low

  * remove "shutdown" command from KadNode console
  * wait for announcements until at least one other node is known
  * support return of multiple answers via NSS
  * fix infinite loop in value list

 -- mwarning <moritzwarning@web.de>  Thu, 13 Feb 2014 15:29:11 +0100

kadnode (0.5) unstable; urgency=low

  * add optional support for public/secret key
    authentication using libsodium (crypto_sign_*)
    * at most 100 auth packets will be processed
	  per second to mitigate DDOS attacks
  * merge 'search' command into 'lookup' command
  * extend 'list' command to show most internal data structures
  * limit 'list' command output to stdout for security reasons
  * major code refactoring
  * less resource use due to more efficient logging
  * add --config to load a configuration file
  * change default port for announces from 1 to random (!= 0)

 -- mwarning <moritzwarning@web.de>  Tue, 12 Nov 2013 02:31:57 +0100

kadnode (0.4) unstable; urgency=low

  * Use only one thread to save resources.
  * Change default DHT port to 6881
  * Add optional support for UPNP/NAT-PMP to add router forwardings
    for KadNode announcements where port > 1
  * Now kadctl allows to specify the time in minutes a value id is to be announced
  * Remove lookup_node, it is not really helpful but confusing
  * Fix broken node export on command line
  * Add --peerfile option to import/export peers